fix: update mobile spacing and focus states

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -20,7 +20,7 @@
 	}
 
 	main {
-		@apply p-8;
+		@apply p-2 md:p-4 lg:p-8;
 	}
 
 	/* Images */
@@ -145,13 +145,13 @@
 		@apply border-2 border-transparent border-solid outline-none;
 	}
 
-a:focus:not(.pdap-nav-link),
-a:focus-visible:not(.pdap-nav-link),
+a:focus,
+a:focus-visible,
 button:focus,
 button:focus-visible,
 [role="button"]:focus,
 [role="button"]:focus-visible {
-		@apply border-2 border-brand-gold-500 border-solid outline-none;
+		@apply border-2 border-brand-gold-300 border-solid outline-none;
 	}
 
 }
